--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,12 +1,12 @@
 .button {
-  border: none;
-  font-family: 'Inter', sans-serif;
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 13px;
-  text-align: center;
-  background-color: #3369f3;
-  color: #fff;
-  padding: 12px;
-  border-radius: 8px;
+	border: none;
+	font-family: var(--main-font);
+	font-weight: 500;
+	font-size: 13px;
+	line-height: 13px;
+	text-align: center;
+	background-color: var(--accent-color);
+	color: var(--globe-color);
+	padding: 12px;
+	border-radius: 8px;
 }
