--- a/src/components/Field/Field.hbs
+++ b/src/components/Field/Field.hbs
@@ -1,9 +1,10 @@
 <label class='{{block}}__field'>
-  <span class='{{block}}__label'>{{label}}</span>
-  <input
-    class='{{block}}__input'
-    name='{{name}}'
-    type='{{type}}'
-    {{otherAtributes}}
-  />
+	<label for='{{id}}' class='{{block}}__label'>{{label}}</label>
+	<input
+		class='{{block}}__input'
+		name='{{name}}'
+		type='{{type}}'
+		id='{{id}}'
+		{{{otherAtributes}}}
+	/>
 </label>
