--- a/src/components/ErrorPage/ErrorPage.scss
+++ b/src/components/ErrorPage/ErrorPage.scss
@@ -1,35 +1,35 @@
 .error-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 
-  &__title {
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 40px;
-    text-align: center;
-    margin: 0 0 20px 0;
-    color: #1e1e1e;
-  }
+	&__title {
+		font-family: var(--main-font);
+		font-weight: 500;
+		font-size: 40px;
+		line-height: 40px;
+		text-align: center;
+		margin: 0 0 20px 0;
+		color: var(--primary-color);
+	}
 
-  &__text {
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 20px;
-    text-align: center;
-    margin: 0 0 70px 0;
-    color: #1e1e1e;
-  }
+	&__text {
+		font-family: var(--main-font);
+		font-weight: 500;
+		font-size: 20px;
+		line-height: 20px;
+		text-align: center;
+		margin: 0 0 70px 0;
+		color: var(--primary-color);
+	}
 
-  &__link {
-    text-decoration: none;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 11px;
-    text-align: center;
-    color: #3369f3;
-  }
+	&__link {
+		text-decoration: none;
+		font-family: var(--main-font);
+		font-weight: 500;
+		font-size: 11px;
+		line-height: 11px;
+		text-align: center;
+		color: var(--accent-color);
+	}
 }
