--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -1,103 +1,103 @@
 .message {
-  position: relative;
-  display: flex;
-  box-sizing: border-box;
+	position: relative;
+	display: flex;
+	box-sizing: border-box;
 
-  &_content {
-    &_text {
-      font-family: 'Inter', sans-serif;
-      font-weight: 500;
-      font-size: 12px;
-      line-height: 15px;
-      color: #1e1e1e;
-      padding: 11px;
-      width: fit-content;
-    }
+	&_content {
+		&_text {
+			font-family: var(--main-font);
+			font-weight: 500;
+			font-size: 12px;
+			line-height: 15px;
+			color: var(--primary-color);
+			padding: 11px;
+			width: fit-content;
+		}
 
-    &_image {
-      border: 1px solid #eaeaea;
-      border-radius: 12px;
-      overflow: hidden;
-    }
-  }
+		&_image {
+			border: 1px solid var(--border-color);
+			border-radius: 12px;
+			overflow: hidden;
+		}
+	}
 
-  &_source {
-    &_incoming {
-      background-color: #f8f8f8;
-      border-radius: 0px 12px 12px 12px;
+	&_source {
+		&_incoming {
+			background-color: #f8f8f8;
+			border-radius: 0 12px 12px 12px;
 
-      &:after {
-        content: '';
-        margin-left: 40px;
-      }
-    }
+			&:after {
+				content: '';
+				margin-left: 40px;
+			}
+		}
 
-    &_outgoing {
-      background-color: #e4edfd;
-      border-radius: 12px 12px 0 12px;
+		&_outgoing {
+			background-color: var(--select-color);
+			border-radius: 12px 12px 0 12px;
 
-      &:after {
-        content: '';
-        margin-left: 50px;
-      }
-    }
-  }
+			&:after {
+				content: '';
+				margin-left: 50px;
+			}
+		}
+	}
 
-  &__data {
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 9px;
-    line-height: 9px;
-    position: absolute;
-    bottom: 11px;
-    right: 11px;
+	&__data {
+		font-family: var(--main-font);
+		font-weight: 500;
+		font-size: 9px;
+		line-height: 9px;
+		position: absolute;
+		bottom: 11px;
+		right: 11px;
 
-    &_type {
-      &_text-incoming {
-        color: #999999;
-      }
+		&_type {
+			&_text-incoming {
+				color: var(--secondary-color);
+			}
 
-      &_text-outgoing {
-        color: #3369f3;
-      }
+			&_text-outgoing {
+				color: var(--accent-color);
+			}
 
-      &_image-incoming {
-        color: #fff;
-        background-color: rgba(82, 82, 82, 0.5);
-        padding: 2px 7px;
-        border-radius: 30px;
-      }
+			&_image-incoming {
+				color: var(--globe-color);
+				background-color: rgba(82, 82, 82, 0.5);
+				padding: 2px 7px;
+				border-radius: 30px;
+			}
 
-      &_image-outgoing {
-        color: #3369f3;
-        background-color: #e4edfd;
-        padding: 2px 7px;
-        border-radius: 30px;
-      }
-    }
+			&_image-outgoing {
+				color: var(--accent-color);
+				background-color: var(--select-color);
+				padding: 2px 7px;
+				border-radius: 30px;
+			}
+		}
 
-    &_status {
-      &_send:before {
-        content: '';
-        background-image: url(/send-icon.svg);
-        background-repeat: no-repeat;
-        background-size: contain;
-        display: inline-block;
-        width: 7px;
-        height: 5px;
-        margin-right: 4px;
-      }
+		&_status {
+			&_send:before {
+				content: '';
+				background-image: url(/send-icon.svg);
+				background-repeat: no-repeat;
+				background-size: contain;
+				display: inline-block;
+				width: 7px;
+				height: 5px;
+				margin-right: 4px;
+			}
 
-      &_read:before {
-        content: '';
-        background-image: url(/read-icon.svg);
-        background-repeat: no-repeat;
-        background-size: contain;
-        display: inline-block;
-        width: 10px;
-        height: 5px;
-        margin-right: 4px;
-      }
-    }
-  }
+			&_read:before {
+				content: '';
+				background-image: url(/read-icon.svg);
+				background-repeat: no-repeat;
+				background-size: contain;
+				display: inline-block;
+				width: 10px;
+				height: 5px;
+				margin-right: 4px;
+			}
+		}
+	}
 }
