--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,157 +1,157 @@
 .profile {
-  position: relative;
-  flex: 1;
-  display: flex;
+	position: relative;
+	flex: 1;
+	display: flex;
 
-  &__side-bar {
-    position: absolute;
-    left: 0;
-    padding: 18px;
-    top: 0;
-    box-sizing: border-box;
-  }
+	&__side-bar {
+		position: absolute;
+		left: 0;
+		padding: 18px;
+		top: 0;
+		box-sizing: border-box;
+	}
 
-  &__content {
-    margin: auto;
-    max-width: 510px;
-    width: 100%;
-  }
+	&__content {
+		margin: auto;
+		max-width: 510px;
+		width: 100%;
+	}
 
-  &__form {
-    &_hide {
-      display: none;
-    }
-  }
+	&__form {
+		&_hide {
+			display: none;
+		}
+	}
 
-  &__avatar {
-    border-radius: 50%;
-    aspect-ratio: 1/1;
-    height: 130px;
-    margin: 0 auto;
-    background-color: #efefef;
-    display: flex;
-    align-items: center;
-    padding: 0;
-    overflow: hidden;
-    border: none;
-    position: relative;
+	&__avatar {
+		border-radius: 50%;
+		aspect-ratio: 1/1;
+		height: 130px;
+		margin: 0 auto;
+		background-color: var(--tetriary-color);
+		display: flex;
+		align-items: center;
+		padding: 0;
+		overflow: hidden;
+		border: none;
+		position: relative;
 
-    &::before {
-      content: 'Поменять аватар';
-      position: absolute;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: transparent;
-      background-color: transparent;
-      height: 100%;
-      width: 100%;
-      transition: all 0.5s linear;
-    }
+		&::before {
+			content: 'Поменять аватар';
+			position: absolute;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			color: transparent;
+			background-color: transparent;
+			height: 100%;
+			width: 100%;
+			transition: all 0.5s linear;
+		}
 
-    &:hover {
-      &::before {
-        background-color: rgba(0, 0, 0, 0.5);
-        color: #fff;
-      }
-    }
+		&:hover {
+			&::before {
+				background-color: rgba(0, 0, 0, 0.5);
+				color: var(--globe-color);
+			}
+		}
 
-    &-image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  }
+		&-image {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
 
-  &__name {
-    text-align: center;
-    font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 16px;
-    margin: 21px 0 60px 0;
-    color: #1e1e1e;
+	&__name {
+		text-align: center;
+		font-family: var(--main-font);
+		font-weight: 600;
+		font-size: 16px;
+		line-height: 16px;
+		margin: 21px 0 60px 0;
+		color: var(--primary-color);
 
-    &_hidden {
-      visibility: hidden;
-    }
-  }
+		&_hidden {
+			visibility: hidden;
+		}
+	}
 
-  &__fields {
-    border: none;
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 0 0 60px 0;
-    gap: 10px;
-  }
+	&__fields {
+		border: none;
+		display: flex;
+		flex-direction: column;
+		padding: 0;
+		margin: 0 0 60px 0;
+		gap: 10px;
+	}
 
-  &__field {
-    display: flex;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #eaeaea;
-    gap: 12px;
-    align-items: center;
-  }
+	&__field {
+		display: flex;
+		padding-bottom: 10px;
+		border-bottom: 1px solid var(--border-color);
+		gap: 12px;
+		align-items: center;
+	}
 
-  &__label {
-    min-width: max-content;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 13px;
-    color: #1e1e1e;
-  }
+	&__label {
+		min-width: max-content;
+		font-family: var(--main-font);
+		font-weight: 500;
+		font-size: 13px;
+		line-height: 13px;
+		color: var(--primary-color);
+	}
 
-  &__input {
-    border: none;
-    width: 100%;
-    text-align: right;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 13px;
-    color: #999999;
-    padding: 0;
+	&__input {
+		border: none;
+		width: 100%;
+		text-align: right;
+		font-family: var(--main-font);
+		font-weight: 500;
+		font-size: 13px;
+		line-height: 13px;
+		color: var(--secondary-color);
+		padding: 0;
 
-    &:focus-visible {
-      outline: none;
-    }
+		&:focus-visible {
+			outline: none;
+		}
 
-    &:disabled {
-      background-color: transparent;
-    }
-  }
+		&:disabled {
+			background-color: transparent;
+		}
+	}
 
-  &__actions {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+	&__actions {
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
 
-    &_hide {
-      display: none;
-    }
-  }
+		&_hide {
+			display: none;
+		}
+	}
 
-  &__button {
-    border: none;
+	&__button {
+		border: none;
 
-    &_change {
-      padding: 0 0 10px 0;
-      border-bottom: 1px solid #eaeaea;
-      text-align: left;
-      background-color: transparent;
-      color: #3369f3;
-    }
+		&_change {
+			padding: 0 0 10px 0;
+			border-bottom: 1px solid var(--border-color);
+			text-align: left;
+			background-color: transparent;
+			color: var(--accent-color);
+		}
 
-    &_exit {
-      padding: 0;
-      text-align: left;
-      background-color: transparent;
-      color: #ff0000;
-    }
+		&_exit {
+			padding: 0;
+			text-align: left;
+			background-color: transparent;
+			color: #ff0000;
+		}
 
-    &_submit {
-    }
-  }
+		&_submit {
+		}
+	}
 }
