--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -75,7 +75,7 @@
 				{{> Field
 					block="profile"
 					label="Старый пароль"
-					name="oldpassword"
+					name="oldPassword"
 					type="password"
 					id="profile-input-oldpassword"
 					otherAtributes="required minlength='8'"
@@ -83,7 +83,7 @@
 				{{> Field
 					block="profile"
 					label="Новый пароль"
-					name="newpassword"
+					name="newPassword"
 					type="password"
 					id="profile-input-newpassword"
 					otherAtributes="required minlength='8'"
