--- a/src/components/ChatPreview/ChatPreview.hbs
+++ b/src/components/ChatPreview/ChatPreview.hbs
@@ -1,4 +1,4 @@
-<{{{element}}} class="chat-preview">
+<li class="chat-preview">
 <img class="chat-preview__avatar" src="{{avatar}}" alt="avatar">
 <div class="chat-preview__content">
 	<div class="chat-preview__head">
@@ -10,4 +10,4 @@
 		<p class="chat-preview__unread">{{unreadMessagesCount}}</p>
 	</div>
 </div>
-</{{{element}}}>
+</li>
