--- a/src/components/ErrorPage/ErrorPage.hbs
+++ b/src/components/ErrorPage/ErrorPage.hbs
@@ -1,5 +1,5 @@
 <main class="error-page app__error">
 	<h1 class="error-page__title">{{error}}</h1>
 	<p class="error-page__text">{{message}}</p>
-	{{> Link href=href class="error-page__link" page=href text=linkText}}
+	{{{Link}}}
 </main>
