--- a/src/components/Field/Field.hbs
+++ b/src/components/Field/Field.hbs
@@ -1,10 +1,7 @@
-<label class='{{block}}__field'>
-	<label for='{{id}}' class='{{block}}__label'>{{label}}</label>
-	<input
-		class='{{block}}__input'
-		name='{{name}}'
-		type='{{type}}'
-		id='{{id}}'
-		{{{otherAtributes}}}
-	/>
-</label>
+<div>
+	<label class='{{block}}__field'>
+		<label for='{{id}}' class='{{block}}__label'>{{label}}</label>
+		{{{Input}}}
+	</label>
+	{{{ErrorMessage}}}
+</div>
