--- a/src/pages/register/register.hbs
+++ b/src/pages/register/register.hbs
@@ -1,67 +1,3 @@
 <main class="auth app__auth">
-	<form name="registration" class="auth-form">
-		<h1 class="auth-form__title">Регистрация</h1>
-		<fieldset class="auth-form__fields">
-			{{> Field
-				block="auth-form"
-				label="Почта"
-				name="email"
-				type="email"
-				id="auth-input-email"
-				otherAtributes="required"
-			}}
-			{{> Field
-				block="auth-form"
-				label="Логин"
-				name="login"
-				type="text"
-				id="auth-input-login"
-				otherAtributes="required minlength='2' maxlength='80'"
-			}}
-			{{> Field
-				block="auth-form"
-				label="Имя"
-				name="first_name"
-				type="text"
-				id="auth-input-first-name"
-				otherAtributes="required minlength='2' maxlength='80'"
-			}}
-			{{> Field
-				block="auth-form"
-				label="Фамилия"
-				name="second_name"
-				type="text"
-				id="auth-input-second-name"
-				otherAtributes="required minlength='2' maxlength='80'"
-			}}
-			{{> Field
-				block="auth-form"
-				label="Телефон"
-				name="phone"
-				type="tel"
-				id="auth-input-phone"
-				otherAtributes="required"
-			}}
-			{{> Field
-				block="auth-form"
-				label="Пароль"
-				name="password"
-				type="password"
-				id="auth-input-password"
-				otherAtributes="required minlength='8'"
-			}}
-			{{> Field
-				block="auth-form"
-				label="Пароль (ещё раз)"
-				name="password_repeat"
-				type="password"
-				id="auth-input-password-repeat"
-				otherAtributes="required minlength='8'"
-			}}
-		</fieldset>
-		<div class="auth-form__actions">
-			{{> Button type="submit" text="Зарегистрироваться"}}
-			{{> Link href="/sing-in" class="auth-form__link" page="/sing-in" text="Войти"}}
-		</div>
-	</form>
+	{{{RegisterForm}}}
 </main>
