--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,27 +1,3 @@
 <main class="auth app__auth">
-	<form name="login" class="auth-form">
-		<h1 class="auth-form__title">Вход</h1>
-		<fieldset class="auth-form__fields">
-			{{> Field
-				block="auth-form"
-				label="Логин"
-				name="login"
-				type="text"
-				id="auth-input-login"
-				otherAtributes="required minlength='2' maxlength='40'"
-			}}
-			{{> Field
-				block="auth-form"
-				label="Пароль"
-				name="password"
-				type="password"
-				id="auth-input-password"
-				otherAtributes="required minlength='8'"
-			}}
-		</fieldset>
-		<div class="auth-form__actions">
-			{{> Button type="submit" text="Войти"}}
-			{{> Link href="/sign-up" class="auth-form__link" page="/sing-up" text="Нет аккаунта?"}}
-		</div>
-	</form>
+	{{{LoginForm}}}
 </main>
