--- a/src/components/UserActionForm/UserActionForm.hbs
+++ b/src/components/UserActionForm/UserActionForm.hbs
@@ -1,4 +1,4 @@
-<form class="file-form" name="{{name}}">
+<form class="file-form" name="{{name}}" novalidate>
 	<h2 class="file-form__title">{{title}}</h2>
 	<fieldset class="auth-form__fields">
 		{{{Fields}}}
