--- a/src/App.scss
+++ b/src/App.scss
@@ -153,3 +153,17 @@
 		display: initial;
 	}
 }
+
+.button {
+	border: none;
+	font-family: var(--main-font);
+	font-weight: 500;
+	font-size: 13px;
+	line-height: 13px;
+	text-align: center;
+	background-color: var(--accent-color);
+	color: var(--globe-color);
+	padding: 12px;
+	border-radius: 8px;
+}
+
