--- a/src/App.scss
+++ b/src/App.scss
@@ -63,10 +63,9 @@
 	opacity: 0;
 	display: none;
 	visibility: hidden;
-	transition:
-		display 0.5s linear,
-		visibility 0.5s linear,
-		opacity 0.5s linear;
+	transition: display 0.5s linear,
+	visibility 0.5s linear,
+	opacity 0.5s linear;
 	transition-behavior: allow-discrete;
 
 	&_open {
@@ -166,4 +165,3 @@
 	padding: 12px;
 	border-radius: 8px;
 }
-
