--- a/src/pages/messanger/messanger.hbs
+++ b/src/pages/messanger/messanger.hbs
@@ -4,11 +4,5 @@
 		{{{ChatsSearchForm}}}
 		{{{ChatsList}}}
 	</div>
-	{{#if CurrentChat}}
-		{{{CurrentChat}}}
-	{{else}}
-		<div class="messanger__chat-window chat-window">
-			<p class="chat-window__default-message">Выберите чат чтобы отправить сообщение</p>
-		</div>
-	{{/if}}
+	{{{ChatWindow}}}
 </main>
