--- a/src/components/LoginForm/LoginForm.hbs
+++ b/src/components/LoginForm/LoginForm.hbs
@@ -1,4 +1,4 @@
-<form name="login" class="auth-form">
+<form name="login" class="auth-form" novalidate>
 	<h1 class="auth-form__title">Вход</h1>
 	<fieldset class="auth-form__fields">
 		{{{Fields}}}
