--- a/src/components/RegisterForm/RegisterForm.hbs
+++ b/src/components/RegisterForm/RegisterForm.hbs
@@ -1,4 +1,4 @@
-<form name="register" class="auth-form">
+<form name="register" class="auth-form" novalidate>
 	<h1 class="auth-form__title">Регистрация</h1>
 	<fieldset class="auth-form__fields">
 		{{{Fields}}}
