--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,8 @@
 	--main-font: 'Inter', sans-serif;
 	--accent-color: #3369f3;
 	--primary-color: #1e1e1e;
-	--secondary-color: #999999;
-	--globe-color: #ffffff;
+	--secondary-color: #999;
+	--globe-color: #fff;
 	--tetriary-color: #efefef;
 	--danger-color: #ff2f2f;
 	--border-color: #eaeaea;
@@ -45,7 +45,7 @@
 		aspect-ratio: 1/1;
 		width: 28px;
 		background-color: var(--accent-color);
-		background-image: url(/arrow.svg);
+		background-image: url('/arrow.svg');
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: 11px 10px;
@@ -78,7 +78,7 @@
 		opacity: 1;
 	}
 
-	&:before {
+	&::before {
 		content: '';
 		position: absolute;
 		height: 100%;
@@ -86,7 +86,7 @@
 		z-index: -1;
 		top: 0;
 		left: 0;
-		background-color: rgba(0, 0, 0, 0.4);
+		background-color: rgb(0 0 0 / 40%);
 	}
 
 	&__container {
@@ -108,7 +108,7 @@
 		font-size: 15px;
 		line-height: 20px;
 		text-align: center;
-		margin: 0 0 43px 0;
+		margin: 0 0 43px;
 		color: var(--primary-color);
 	}
 
@@ -123,7 +123,7 @@
 		text-decoration: underline;
 		color: var(--accent-color);
 		max-width: 122px;
-		margin: 0 auto 45px auto;
+		margin: 0 auto 45px;
 	}
 
 	&__input {
