--- a/src/components/ErrorPage/ErrorPage.scss
+++ b/src/components/ErrorPage/ErrorPage.scss
@@ -9,7 +9,7 @@
 		font-size: 40px;
 		line-height: 40px;
 		text-align: center;
-		margin: 0 0 20px 0;
+		margin: 0 0 20px;
 		color: var(--primary-color);
 	}
 
@@ -19,7 +19,7 @@
 		font-size: 20px;
 		line-height: 20px;
 		text-align: center;
-		margin: 0 0 70px 0;
+		margin: 0 0 70px;
 		color: var(--primary-color);
 	}
 
