--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -24,9 +24,9 @@
 	&_source {
 		&_incoming {
 			background-color: #f8f8f8;
-			border-radius: 0 12px 12px 12px;
+			border-radius: 0 12px 12px;
 
-			&:after {
+			&::after {
 				content: '';
 				margin-left: 40px;
 			}
@@ -34,9 +34,9 @@
 
 		&_outgoing {
 			background-color: var(--select-color);
-			border-radius: 12px 12px 0 12px;
+			border-radius: 12px 12px 0;
 
-			&:after {
+			&::after {
 				content: '';
 				margin-left: 50px;
 			}
@@ -63,7 +63,7 @@
 
 			&_image-incoming {
 				color: var(--globe-color);
-				background-color: rgba(82, 82, 82, 0.5);
+				background-color: rgb(82 82 82 / 50%);
 				padding: 2px 7px;
 				border-radius: 30px;
 			}
@@ -77,9 +77,9 @@
 		}
 
 		&_status {
-			&_send:before {
+			&_send::before {
 				content: '';
-				background-image: url(/send-icon.svg);
+				background-image: url('/send-icon.svg');
 				background-repeat: no-repeat;
 				background-size: contain;
 				display: inline-block;
@@ -88,9 +88,9 @@
 				margin-right: 4px;
 			}
 
-			&_read:before {
+			&_read::before {
 				content: '';
-				background-image: url(/read-icon.svg);
+				background-image: url('/read-icon.svg');
 				background-repeat: no-repeat;
 				background-size: contain;
 				display: inline-block;
