--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -58,7 +58,7 @@
 
 		&:hover {
 			&::before {
-				background-color: rgba(0, 0, 0, 0.5);
+				background-color: rgb(0 0 0 / 50%);
 				color: var(--globe-color);
 			}
 		}
@@ -76,7 +76,7 @@
 		font-weight: 600;
 		font-size: 16px;
 		line-height: 16px;
-		margin: 21px 0 60px 0;
+		margin: 21px 0 60px;
 		color: var(--primary-color);
 
 		&_hidden {
@@ -89,7 +89,7 @@
 		display: flex;
 		flex-direction: column;
 		padding: 0;
-		margin: 0 0 60px 0;
+		margin: 0 0 60px;
 		gap: 10px;
 	}
 
@@ -145,7 +145,7 @@
 		border: none;
 
 		&_change {
-			padding: 0 0 10px 0;
+			padding: 0 0 10px;
 			border-bottom: 1px solid var(--border-color);
 			text-align: left;
 			background-color: transparent;
@@ -156,10 +156,7 @@
 			padding: 0;
 			text-align: left;
 			background-color: transparent;
-			color: #ff0000;
-		}
-
-		&_submit {
+			color: #f00;
 		}
 	}
 }
