--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,6 +1,6 @@
 .auth-form {
-	box-shadow: 0 0 6px 0 #00000024;
-	padding: 50px 30px 30px 30px;
+	box-shadow: 0 0 6px 0 rgb(0 0 0 / 14%);
+	padding: 50px 30px 30px;
 	border-radius: 12px;
 	max-width: 340px;
 	width: 100%;
@@ -15,7 +15,7 @@
 		font-size: 20px;
 		line-height: 20px;
 		text-align: center;
-		margin: 0 0 40px 0;
+		margin: 0 0 40px;
 		color: var(--primary-color);
 	}
 
@@ -24,7 +24,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: 16px;
-		margin: 0 0 60px 0;
+		margin: 0 0 60px;
 		padding: 0;
 	}
 
