feat: add resources api

--- a/src/components/ChatMessages/template.hbs
+++ b/src/components/ChatMessages/template.hbs
@@ -1,6 +1,6 @@
 <div class="chat-window__chat chat">
-	{{#if dataMessages}}
-		{{{content}}}
+	{{#if messages}}
+		{{{messages}}}
 	{{else}}
 		<p class="chat-window__default-message">У вас пока нет сообщений</p>
 	{{/if}}
