--- a/src/components/ChatMessages/template.hbs
+++ b/src/components/ChatMessages/template.hbs
@@ -1,5 +1,5 @@
 <div class="chat-window__chat chat">
-	{{#if messages}}
+	{{#if messagesCount}}
 		{{{messages}}}
 	{{else}}
 		<p class="chat-window__default-message">У вас пока нет сообщений</p>
