--- a/src/components/TextMessage/template.hbs
+++ b/src/components/TextMessage/template.hbs
@@ -1,5 +1,5 @@
 <p class="{{addictedClass}} message message_content_text message_source_{{source}}">
-		{{{text}}}
+		{{{content}}}
 		<span class="message__data {{#if
 			status}} message__data_status_{{status}} {{/if}} message__data_type_text-{{source}}">{{time}}</span>
 </p>
