feat: add change chat avatar popup

--- a/src/components/ChatHeader/template.hbs
+++ b/src/components/ChatHeader/template.hbs
@@ -1,5 +1,5 @@
 <header class="chat-window__header">
-	<img class="chat-window__avatar" src="{{avatar}}" alt="avatar">
+	{{{avatar}}}
 	<h3 class="chat-window__name">{{name}}</h3>
 	{{{OptionsButton}}}
 	{{{Menu}}}
