--- a/src/components/UserPreview/template.hbs
+++ b/src/components/UserPreview/template.hbs
@@ -2,11 +2,10 @@
 	<img class="chat-preview__avatar" src="{{avatar}}" alt="avatar">
 	<div class="chat-preview__content">
 		<div class="chat-preview__head">
-			<h4 class="chat-preview__name">{{{login}}}</h4>
+			<h4 class="chat-preview__name">{{{user.login}}}</h4>
 		</div>
 		<div class="chat-preview__info">
-			<p class="chat-preview__last-message">{{first_name}} {{last_name}}</p>
-			<p class="chat-preview__last-message">{{phone}}</p>
+			<p class="chat-preview__last-message">{{user.first_name}} {{user.second_name}}</p>
 		</div>
 	</div>
 </li>
